--- a/bikes/08_deepar.ipynb
+++ b/bikes/08_deepar.ipynb
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCATION = \"Quay Street Eco Display Classic\"\n",
+    "LOCATION = \"Tamaki Drive\"\n",
     "\n",
     "location_df = cycle_counts.loc[cycle_counts[\"location\"] == LOCATION].copy()\n",
     "location_df = location_df.set_index(\"date\").sort_index()\n",
@@ -370,7 +370,7 @@
     "\n",
     "deepar.eval()\n",
     "with torch.no_grad():\n",
-    "    forecast_distribution = []\n",
+    "    trajectories = []\n",
     "    for s in tqdm(range(n_samples)):\n",
     "        \n",
     "        X_test = y_train_scaled.iloc[-in_seq_length:].values\n",
@@ -395,7 +395,7 @@
     "            X_test = torch.cat((X_test, y_hat_scaled), dim=1)\n",
     "\n",
     "        trajectory = torch.cat(trajectory, dim=1)\n",
-    "        forecast_distribution.append(trajectory)"
+    "        trajectories.append(trajectory)"
    ]
   },
   {
@@ -405,27 +405,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecasts = torch.cat(forecast_distribution, dim=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46e46c1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forecast_mean = torch.mean(forecasts, dim=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7cae39e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forecast_series = pd.Series(data=forecast_mean.flatten().numpy(), index=y_test.index)"
+    "forecasts = torch.cat(trajectories, dim=0)\n",
+    "forecast_mean = torch.mean(forecasts, dim=0).numpy().flatten()\n",
+    "forecasts_std = torch.std(forecasts, dim=0).numpy().flatten()\n",
+    "forecasts_pct5 = torch.quantile(forecasts, q=0.05, dim=0).numpy().flatten()\n",
+    "forecasts_pct95 = torch.quantile(forecasts, q=0.95, dim=0).numpy().flatten()"
    ]
   },
   {
@@ -435,9 +419,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(y_test, label=\"Observed\")\n",
-    "plt.plot(forecast_series, label=\"Forecast\")\n",
-    "plt.legend()"
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.plot(\n",
+    "    y_test.index.values,\n",
+    "    y_test.values,\n",
+    "    label=\"Observed\",\n",
+    "    lw=2,\n",
+    "    color=\"black\"\n",
+    ")\n",
+    "ax.plot(\n",
+    "    y_test.index.values,\n",
+    "    forecast_mean,\n",
+    "    label=\"Predicted\",\n",
+    "    lw=2,\n",
+    "    color=\"#1f77b4\"\n",
+    ")\n",
+    "ax.fill_between(\n",
+    "    y_test.index.values,\n",
+    "    forecasts_pct5,\n",
+    "    forecasts_pct95,\n",
+    "    alpha=0.2,\n",
+    "    color=\"#1f77b4\",\n",
+    "    lw=0\n",
+    ")\n",
+    "ax.grid(True)\n",
+    "ax.legend()\n",
+    "ax.set(ylabel=\"Counts\", title=LOCATION)\n",
+    "\n",
+    "for tick in ax.get_xticklabels():\n",
+    "    tick.set_rotation(45)\n",
+    "\n",
+    "fig.tight_layout();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36548148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save mean forecasts\n",
+    "forecast_df = pd.merge(\n",
+    "    left=test_df.rename(columns={\"count\": \"ytrue\"}),\n",
+    "    right=pd.DataFrame(data=forecast_mean, index=y_test.index, columns=[\"yhat_deepar\"]),\n",
+    "    left_index=True,\n",
+    "    right_index=True,\n",
+    "    how=\"left\"\n",
+    ")\n",
+    "forecast_df = forecast_df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a5dac49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert not forecast_df[\"date\"].isna().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c8eea06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast_df.to_csv(f\"./forecasts/deepar/{LOCATION.replace(' ', '_').lower()}.csv\")"
    ]
   }
  ],
