Update study notebooks

--- a/bikes/study_notebooks/01_exp_smoothing.ipynb
+++ b/bikes/study_notebooks/01_exp_smoothing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCATION = \"Nelson St\""
+    "LOCATION = \"Nelson Street\""
    ]
   },
   {
@@ -37,7 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_counts = pd.read_csv(\"cycle_counts.csv\", parse_dates=[\"time\"])\n",
+    "cycle_counts_path = \"../cycle_counts.csv\"\n",
+    "cycle_counts = pd.read_csv(cycle_counts_path, parse_dates=[\"date\"])\n",
     "cycle_counts = cycle_counts[cycle_counts[\"location\"] == LOCATION]"
    ]
   },
@@ -48,7 +49,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(cycle_counts[\"time\"], cycle_counts[\"count\"])\n",
+    "ax.plot(cycle_counts[\"date\"], cycle_counts[\"count\"])\n",
     "ax.set(title=LOCATION, ylabel=\"Count\")\n",
     "for tick in ax.get_xticklabels():\n",
     "    tick.set_rotation(45)\n",
@@ -68,8 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_counts[\"time\"] = pd.to_datetime(cycle_counts[\"time\"])\n",
-    "cycle_counts = cycle_counts.set_index(\"time\").drop(columns=[\"location\"])\n",
+    "cycle_counts[\"date\"] = pd.to_datetime(cycle_counts[\"date\"])\n",
+    "cycle_counts = cycle_counts.set_index(\"date\").drop(columns=[\"location\"])\n",
     "cycle_counts = cycle_counts.resample(\"D\").sum()\n",
     "cycle_counts = cycle_counts.fillna(0)"
    ]
@@ -326,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bikes",
    "language": "python",
    "name": "python3"
   },
