--- a/bikes/study_notebooks/03_prophet.ipynb
+++ b/bikes/study_notebooks/03_prophet.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCATION = \"Nelson St\""
+    "LOCATION = \"Nelson Street\""
    ]
   },
   {
@@ -39,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_counts = pd.read_csv(\"cycle_counts.csv\", parse_dates=[\"time\"])\n",
+    "cycle_counts_path = \"../cycle_counts.csv\"\n",
+    "cycle_counts = pd.read_csv(cycle_counts_path, parse_dates=[\"date\"])\n",
     "cycle_counts = cycle_counts[cycle_counts[\"location\"] == LOCATION]"
    ]
   },
@@ -50,7 +51,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(cycle_counts[\"time\"], cycle_counts[\"count\"], lw=1.5)\n",
+    "ax.plot(cycle_counts[\"date\"], cycle_counts[\"count\"], lw=1.5)\n",
     "ax.set(title=LOCATION, ylabel=\"Count\")\n",
     "for tick in ax.get_xticklabels():\n",
     "    tick.set_rotation(45)\n",
@@ -63,9 +64,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_counts[\"time\"] = pd.to_datetime(cycle_counts[\"time\"])\n",
-    "cycle_counts = cycle_counts.set_index(\"time\").drop(columns=[\"location\"])\n",
-    "cycle_counts = cycle_counts.resample(\"D\").sum().interpolate()"
+    "cycle_counts[\"date\"] = pd.to_datetime(cycle_counts[\"date\"])\n",
+    "cycle_counts = cycle_counts.set_index(\"date\").drop(columns=[\"location\"])\n",
+    "cycle_counts = cycle_counts.resample(\"D\").sum()\n",
+    "cycle_counts = cycle_counts.fillna(0)"
    ]
   },
   {
@@ -164,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_counts = cycle_counts.reset_index().rename(columns={\"time\": \"ds\", \"count\": \"y\"})\n",
+    "cycle_counts = cycle_counts.reset_index().rename(columns={\"date\": \"ds\", \"count\": \"y\"})\n",
     "\n",
     "n_test = 4 * 7\n",
     "train = cycle_counts.iloc[:-n_test]\n",
@@ -258,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bikes",
    "language": "python",
    "name": "python3"
   },
