--- a/bikes/study_notebooks/04_rnns.ipynb
+++ b/bikes/study_notebooks/04_rnns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8e46c805",
    "metadata": {},
    "outputs": [],
@@ -41,8 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCATION = \"Nelson St\"\n",
-    "cycle_counts = pd.read_csv(\"cycle_counts.csv\", parse_dates=[\"time\"])\n",
+    "LOCATION = \"Nelson Street\"\n",
+    "cycle_counts_path = \"../cycle_counts.csv\"\n",
+    "cycle_counts = pd.read_csv(cycle_counts_path, parse_dates=[\"date\"])\n",
     "cycle_counts = cycle_counts[cycle_counts[\"location\"] == LOCATION]"
    ]
   },
@@ -54,7 +55,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(cycle_counts[\"time\"], cycle_counts[\"count\"], lw=1.5)\n",
+    "ax.plot(cycle_counts[\"date\"], cycle_counts[\"count\"], lw=1.5)\n",
     "ax.set(title=LOCATION, ylabel=\"Count\")\n",
     "for tick in ax.get_xticklabels():\n",
     "    tick.set_rotation(45)\n",
@@ -68,8 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_counts[\"time\"] = pd.to_datetime(cycle_counts[\"time\"])\n",
-    "cycle_counts = cycle_counts.set_index(\"time\").drop(columns=[\"location\"])\n",
+    "cycle_counts[\"date\"] = pd.to_datetime(cycle_counts[\"date\"])\n",
+    "cycle_counts = cycle_counts.set_index(\"date\").drop(columns=[\"location\"])\n",
     "cycle_counts = cycle_counts.resample(\"D\").sum().interpolate()"
    ]
   },
@@ -260,8 +261,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Hide some of the logic here as an excercise\n",
-    "\n",
     "scaler = Scaler()\n",
     "scaled_counts = scaler.fit_transform(cycle_counts[\"count\"])\n",
     "\n",
@@ -290,8 +289,6 @@
    "outputs": [],
    "source": [
     "# Training loop\n",
-    "\n",
-    "# TODO: Hide some of the logic here as an excercise\n",
     "\n",
     "model = RNN_1()\n",
     "loss_fn = nn.MSELoss()\n",
@@ -367,8 +364,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Remove some logic to make an excercise\n",
-    "\n",
     "class RNN_2(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -437,7 +432,7 @@
     "loss_fn = nn.MSELoss()\n",
     "optimizer = Adam(model.parameters(), lr=1e-03)\n",
     "\n",
-    "n_epochs = 300\n",
+    "n_epochs = 100\n",
     "\n",
     "n_samples = X_train.shape[0]\n",
     "batch_size = 30\n",
@@ -542,8 +537,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Remove some logic to make an excercise\n",
-    "\n",
     "class RNN_3(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -603,7 +596,7 @@
     "\n",
     "model.train()\n",
     "\n",
-    "n_epochs = 300\n",
+    "n_epochs = 100\n",
     "for epoch in range(n_epochs):\n",
     "    for X_train, y_train in dataloader:\n",
     "        optimizer.zero_grad()\n",
@@ -688,8 +681,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Remove some logic to make an excercise\n",
-    "\n",
     "class LSTM(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -750,7 +741,7 @@
     "\n",
     "model.train()\n",
     "\n",
-    "n_epochs = 300\n",
+    "n_epochs = 100\n",
     "for epoch in range(n_epochs):\n",
     "    for X_train, y_train in dataloader:\n",
     "        optimizer.zero_grad()\n",
