Update model notebooks

--- a/bikes/01_data.ipynb
+++ b/bikes/01_data.ipynb
@@ -115,7 +115,10 @@
                 "ax[1].plot(av_daily_counts[\"date\"], np.log1p(av_daily_counts[\"count\"]), color=\"blue\", linewidth=2)\n",
                 "\n",
                 "ax[0].set(ylabel=\"Count\")\n",
-                "ax[1].set(ylabel=\"Log(Count)\")"
+                "ax[1].set(ylabel=\"Log(Count)\")\n",
+                "\n",
+                "fig.align_labels()\n",
+                "fig.tight_layout();"
             ]
         },
         {
