--- a/bikes/02_ets.ipynb
+++ b/bikes/02_ets.ipynb
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecast_df.head()"
+    "assert not forecast_df[\"date\"].isna().any()"
    ]
   },
   {
