--- a/bikes/06_rnn.ipynb
+++ b/bikes/06_rnn.ipynb
@@ -27,7 +27,7 @@
     "from torch.optim import Adam\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from bikes.preprocess.preprocess import get_tensor_train_dataset, Scaler\n",
+    "from bikes.preprocess.preprocess import get_tensor_train_dataset, StandardScaler\n",
     "from bikes.evaluate.split import train_test_split"
    ]
   },
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "# Prepare data\n",
-    "scaler = Scaler()\n",
+    "scaler = StandardScaler()\n",
     "y_train_scaled = scaler.fit_transform(y_train)\n",
     "\n",
     "out_seq_length = len(y_test.index)\n",
@@ -250,7 +250,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bikes",
    "language": "python",
    "name": "python3"
   },
