--- a/bikes/05_prophet.ipynb
+++ b/bikes/05_prophet.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecast_df.head()"
+    "assert not forecast_df[\"date\"].isna().any()"
    ]
   },
   {
