chore: tweaks to data notebook

--- a/bikes/01_data.ipynb
+++ b/bikes/01_data.ipynb
@@ -54,6 +54,15 @@
             ]
         },
         {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "cycle_counts[\"location\"].nunique()"
+            ]
+        },
+        {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -170,10 +179,10 @@
                 "locations = high_demand_locs[\"location\"].values\n",
                 "colors = cm.coolwarm(np.linspace(0, 1, len(locations)))\n",
                 "for i, location in enumerate(locations):\n",
-                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == location].sort_values(\"date\").iloc[-500:]\n",
+                "    location_df = cycle_counts[cycle_counts[\"location\"] == location].sort_values(\"date\").iloc[-500:]\n",
                 "    ax.plot(\n",
-                "        outlier_df[\"date\"],\n",
-                "        outlier_df[\"count\"],\n",
+                "        location_df[\"date\"],\n",
+                "        location_df[\"count\"],\n",
                 "        label=location,\n",
                 "        color=colors[i],\n",
                 "        lw=2.5,\n",
@@ -188,9 +197,42 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "# Focus on specific locations\n",
+                "\n",
+                "locations = [\n",
+                "    \"Dominion Road\",\n",
+                "    \"Lake Road\",\n",
+                "    \"Waterview Unitec\",\n",
+                "    \"Nelson Street\",\n",
+                "    \"NW Cycleway Kingsland\"\n",
+                "]\n",
+                "\n",
+                "fig, ax = plt.subplots(len(locations), 1, figsize=(10, 6.5), sharex=True)\n",
+                "for i, location in enumerate(locations):\n",
+                "    location_df = cycle_counts[cycle_counts[\"location\"] == location].sort_values(\"date\").iloc[-500:]\n",
+                "    ax[i].plot(\n",
+                "        location_df[\"date\"],\n",
+                "        location_df[\"count\"],\n",
+                "        label=location,\n",
+                "\n",
+                "        lw=2,\n",
+                "    )\n",
+                "    ax[i].legend(loc=2, fontsize=\"small\")\n",
+                "    ax[i].set(ylabel=\"Count\")\n",
+                "fig.align_labels();\n",
+                "fig.tight_layout();\n",
+                "plt.savefig(\"./plots/eda/cycle-count-timeseries.png\", dpi=300);"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
                 "counts_pivot = cycle_counts.pivot_table(columns=\"date\", index=\"location\", values=\"count\", aggfunc=\"sum\")\n",
                 "counts_pivot = counts_pivot.fillna(0).assign(average=lambda x: x.mean(axis=1))\n",
-                "counts_pivot = counts_pivot[counts_pivot[\"average\"].between(0, 100)]\n",
+                "counts_pivot = counts_pivot[counts_pivot[\"average\"].between(250, 2000)]\n",
                 "counts_pivot = counts_pivot.sort_values(\"average\", ascending=False).drop(columns=\"average\")\n",
                 "\n",
                 "fig, ax = plt.subplots(1, 1)\n",
